修改了页面样式，添加了某些模块的材料，添加古代武器词条

--- a/docs/料理制作.md
+++ b/docs/料理制作.md
@@ -1,6 +1,226 @@
 ### 制作列表
 
-
+<table>
+    <tr>
+      <th width=200>物品</th>
+      <th width=150>材料</th>
+      <th width=60>配方</th>
+      <th>用途</th>
+   </tr>
+   <tr>
+      <td>盐烤肉便当</td>
+      <td>腥臭的肉 x1</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复100HP</td>
+   </tr>
+   <tr>
+      <td>芝士烤肉便当</td>
+      <td>腥臭的肉 x2</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复160HP</td>
+   </tr>
+   <tr>
+      <td rowspan=2>拼盘烤肉便当</td>
+      <td>腥臭的肉 x3</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复220HP</td>
+   </tr>
+   <tr>
+      <td>祝福灯笼草 x1</td>
+   </tr>
+   <tr>
+      <td>一条海鲜便当</td>
+      <td>下游鱼里脊 x2</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复100HP</td>
+   </tr>
+   <tr>
+      <td>双鱼便当</td>
+      <td>下游鱼里脊 x3</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复160HP</td>
+   </tr>
+   <tr>
+      <td rowspan=2>什锦鲜鱼便当</td>
+      <td>下游鱼里脊 x3</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复220HP</td>
+   </tr>
+   <tr>
+      <td>下游鱼肚 x1</td>
+   </tr>
+   <tr>
+      <td>猪肉串便当</td>
+      <td>劲道的肉 x5</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复340HP</td>
+   </tr>
+   <tr>
+      <td>烤鱼便当</td>
+      <td>上游鱼里脊 x5</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复280HP</td>
+   </tr>
+   <tr>
+      <td>调味烤鱼便当</td>
+      <td>海水鱼里脊 x6</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复460HP</td>
+   </tr>
+   <tr>
+      <td>炖鱼便当</td>
+      <td>湖水鱼里脊 x6</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复590HP</td>
+   </tr>
+   <tr>
+      <td>凉拌生鱼片便当</td>
+      <td>河水鱼里脊 x6</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复710HP</td>
+   </tr>
+   <tr>
+      <td>单层烤肉便当</td>
+      <td>普通的鲜肉 x5</td>
+      <td>无</td>
+      <td>食用20s便当。食用时每2s恢复510HP</td>
+   </tr>
+   <tr>
+      <td>鱼羹</td>
+      <td>眼斑双锯鱼 x1</td>
+      <td>有</td>
+      <td>食用20s便当。食用时每2s恢复280HP；持续食用20s时，60分钟内钓鱼张力+2</td>
+   </tr>
+   <tr>
+      <td rowspan=2>双层烤肉郊游便当</td>
+      <td>普通的鲜肉 x2</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复590HP</td>
+   </tr>
+   <tr>
+      <td>黎明蕨菜 x2</td>
+   </tr>
+   <tr>
+      <td rowspan=2>盐烤鱼便当</td>
+      <td>上游鱼里脊 x4</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复340HP</td>
+   </tr>
+   <tr>
+      <td>上游鱼肚 x1</td>
+   </tr>
+   <tr>
+      <td rowspan=2>经济型三层烤肉郊游便当</td>
+      <td>优质的里脊 x2</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复710HP</td>
+   </tr>
+   <tr>
+      <td>狐珠草 x1</td>
+   </tr>
+   <tr>
+      <td  rowspan=2>鸡肉串便当</td>
+      <td>腥臭的肉 x3</td>
+      <td rowspan=2>有</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复280HP</td>
+   </tr>
+   <tr>
+      <td>祝福灯笼草 x2</td>
+   </tr>
+   <tr>
+      <td rowspan=2>调味牛肉串便当</td>
+      <td>劲道的肉 x2</td>
+      <td rowspan=2>有</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复460HP</td>
+   </tr>
+   <tr>
+      <td>吐息蘑菇 x2</td>
+   </tr>
+   <tr>
+      <td rowspan=2>三层烤肉郊游便当</td>
+      <td>优质的里脊 x3</td>
+      <td rowspan=2>有</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复710HP</td>
+   </tr>
+   <tr>
+      <td>狐珠草 x2</td>
+   </tr>
+   <tr>
+      <td rowspan=2>纳瓦拉庆典浓汤</td>
+      <td>庆典食材 x1</td>
+      <td rowspan=2>有</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复280HP；持续食用20s时，60分钟内狩猎金币获得量+3%</td>
+   </tr>
+   <tr>
+      <td>腥臭的肉 x5</td>
+   </tr>
+   <tr>
+      <td rowspan=3>美味水果布丁便当</td>
+      <td>熟成的水果 x1</td>
+      <td rowspan=3>无</td>
+      <td rowspan=3>食用20s便当。食用时每2s恢复850HP。持续食用20s时，15分钟内采集/采矿/伐木时间缩短10%</td>
+   </tr>
+   <tr>
+      <td>熟成的果汁 x1</td>
+   </tr>
+   <tr>
+      <td>珠子精髓 x1</td>
+   </tr>
+   <tr>
+      <td rowspan=2>经济型美味南瓜沙拉便当</td>
+      <td>熟成的水果 x2</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复850HP。持续食用20s时，15分钟内声望获得+5%</td>
+   </tr>
+   <tr>
+      <td>狐珠草 x4</td>
+   </tr>
+   <tr>
+      <td rowspan=2>经济型美味水果布丁便当</td>
+      <td>熟成的水果 x2</td>
+      <td rowspan=2>无</td>
+      <td rowspan=2>食用20s便当。食用时每2s恢复850HP。持续食用20s时，15分钟内采集/采矿/伐木时间缩短10%</td>
+   </tr>
+   <tr>
+      <td>狐珠草 x4</td>
+   </tr>
+   <tr>
+      <td rowspan=3>美味南瓜沙拉便当</td>
+      <td>熟成的水果 x1</td>
+      <td rowspan=3>有</td>
+      <td rowspan=3>食用20s便当。食用时每2s恢复850HP。持续食用20s时，15分钟内声望获得+5%</td>
+   </tr>
+   <tr>
+      <td>熟成的果汁 x1</td>
+   </tr>
+   <tr>
+      <td>珠子精髓 x1</td>
+   </tr>
+   <tr>
+      <td rowspan=3>美味牛排便当</td>
+      <td>鲜肉特殊部位 x2</td>
+      <td rowspan=3>有</td>
+      <td rowspan=3>食用20s便当。食用时每2s恢复280HP；持续食用20s时，60分钟内狩猎经验获得量+3%</td>
+   </tr>
+   <tr>
+      <td>熟透的果汁 x1</td>
+   </tr>
+   <tr>
+      <td>狐珠草 x2</td>
+   </tr>
+   <tr>
+      <td rowspan=3>经济型美味牛排便当</td>
+      <td>鲜肉特殊部位 x3</td>
+      <td rowspan=3>有</td>
+      <td rowspan=3>食用20s便当。食用时每2s恢复280HP；持续食用20s时，60分钟内狩猎经验获得量+3%</td>
+   </tr>
+   <tr>
+      <td>成熟的水果 x1</td>
+   </tr>
+   <tr>
+      <td>狐珠草 x2</td>
+   </tr>
+</table>
 
 #### 便当
 
@@ -451,5 +671,132 @@
       <td>肉屑鱼饵</td>
       <td>腥臭的肉 x8</td>
       <td>用作钓鱼时的鱼饵，适合钓小型鱼，偶尔也能钓到中型鱼。</td>
+   </tr>
+</table>
+
+
+
+
+
+<table>
+   <tr>
+      <td>辉煌的黄昏之杖</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3890.6</td>
+      <td>法杖</td>
+   </tr>
+   <tr>
+      <td>辉煌的破晓之杖</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3890.6</td>
+      <td>法杖</td>
+   </tr>
+   <tr>
+      <td>辉煌的黄昏大剑</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3890.6</td>
+      <td>双手剑</td>
+   </tr>
+   <tr>
+      <td>辉煌的破晓大剑</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3890.6</td>
+      <td>双手剑</td>
+   </tr>
+   <tr>
+      <td>璀璨的黄昏之剑</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3022.8</td>
+      <td>单手剑</td>
+   </tr>
+   <tr>
+      <td>辉煌的黄昏之剑</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3022.8</td>
+      <td>单手剑</td>
+   </tr>
+   <tr>
+      <td>璀璨的破晓之剑</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3022.8</td>
+      <td>单手剑</td>
+   </tr>
+   <tr>
+      <td>辉煌的破晓之剑</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>905</td>
+      <td>110</td>
+      <td>3022.8</td>
+      <td>单手剑</td>
+   </tr>
+   <tr>
+      <td>寂灭者之镰</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>890</td>
+      <td>110</td>
+      <td>3382.2</td>
+      <td>长柄武器</td>
+   </tr>
+   <tr>
+      <td>寂灭者之镰</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>890</td>
+      <td>110</td>
+      <td>3382.2</td>
+      <td>长柄武器</td>
+   </tr>
+   <tr>
+      <td>泰沙拉克</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>890</td>
+      <td>110</td>
+      <td>3382.3</td>
+      <td>双手剑</td>
+   </tr>
+   <tr>
+      <td>戒卫之锤</td>
+   </tr>
+   <tr>
+      <td>   </td>
+      <td>890</td>
+      <td>110</td>
+      <td>2627.8</td>
+      <td>单手锤</td>
    </tr>
 </table>
