--- a/docs/材料来源.md
+++ b/docs/材料来源.md
@@ -16,5 +16,26 @@
       <td>可在领地的食品店生成获得</td>
       <td>被修复的古代骨装饰的原材料之一</td>
    </tr>
+   <tr>
+      <td>破碎的古代宝石装饰</td>
+      <td>可在领地的炼金工坊生成获得</td>
+      <td>被修复的古代宝石装饰的原材料之一</td>
+   </tr>
+   <tr>
+      <td>破碎的古代丝装饰</td>
+      <td>可在领地的皮匠工坊生成获得</td>
+      <td>被修复的古代丝装饰的原材料之一</td>
+   </tr>
+   <tr>
+      <td>破碎的古代木装饰</td>
+      <td>可在领地的木匠铺生成获得</td>
+      <td>被修复的古代木装饰的原材料之一</td>
+   </tr>
+    <tr>
+      <td>破碎的古代铁装饰</td>
+      <td>可在领地的铁匠铺生成获得</td>
+      <td>被修复的古代铁装饰的原材料之一</td>
+   </tr>
 </table>
+
 
