忽略site文件夹

--- a/docs/古代武器.md
+++ b/docs/古代武器.md
@@ -48,15 +48,13 @@
       <td>每十个红宝石可以转换一个蓝宝石</td>
    </tr>
    <tr>
-      <td>亡灵之魂 x7</td>
+      <td rowspan=3>亡灵之魂 x7</td>
       <td>食尸鬼的灵魂碎片 x1</td>
    </tr>
    <tr>
-      <td></td>
       <td>黑骑士灵魂碎片 x1</td>
    </tr>
    <tr>
-      <td></td>
       <td>复活的杀人魔的灵魂碎片 x1</td>
    </tr>
    <tr>
@@ -178,6 +176,7 @@
       <td>高级武器强化石 x2</td>
    </tr>
 </table>
+
 
 #### 古代武器成长的主材料
 
